--- a/extras/File Type Icons/readme
+++ b/extras/File Type Icons/readme
@@ -1,2 +1,4 @@
-Icons By Bilal Hussain (http://bilalh.github.com/)
-If you want to edit them use the audio icons since the video icon were just hacked together quickly and aren't as good.
+Icons by Bilal Syed Hussain (http://bilalh.github.com/) (bh.terra@gmail.com)
+If you want to edit them use the audio or subs icons since they would be easier to edit.
+
+The binary icon is based on X11's icon
